--- a/src/components/auctions/auctionCard.css
+++ b/src/components/auctions/auctionCard.css
@@ -1,10 +1,11 @@
 h5{
-  font-weight: bolder;!important;
+  font-weight: bolder!important;
 
 }
 
 p{
   font-weight: lighter!important;
+   margin: 0!important;
 }
 
 p span{
