--- a/assets/index-BQNlDW3D.css
+++ b/assets/index-BQNlDW3D.css
@@ -1,4 +1,4 @@
-@charset "UTF-8";h5{font-weight:bolder;!important}p{font-weight:lighter!important}p span{font-weight:400!important}input[type=text]{margin-bottom:8px}.btnBorrarInforme{text-align:center}body{background-color:#0044ff23!important}/*!
+@charset "UTF-8";h5{font-weight:bolder!important}p{font-weight:lighter!important;margin:0!important}p span{font-weight:400!important}input[type=text]{margin-bottom:8px}.btnBorrarInforme{text-align:center}body{background-color:#0044ff23!important}/*!
  * Bootstrap  v5.3.3 (https://getbootstrap.com/)
  * Copyright 2011-2024 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
